--- a/src/main/resources/vm/common/head.vm
+++ b/src/main/resources/vm/common/head.vm
@@ -10,6 +10,12 @@
     .x-red {
         color: red;
     }
+
+    .layui-table-hover {
+        -webkit-box-shadow: inset 0 0 10px #8D8D8D;
+        -moz-box-shadow: inset 0 0 10px #8D8D8D;
+        box-shadow: inset 0 0 10px #8D8D8D;
+    }
 </style>
 <script type="text/javascript" src="$!jpomProxyPath/static/layui/layui.js?v=$staticCacheTime"></script>
 <script type="text/javascript">
@@ -37,10 +43,7 @@
         if (options.id != "welcome") {
             lay_id += options.title;
         ## 如果存在选项卡，切换，否则创建
-            if ($('[lay-id="' + lay_id + '"]', top.document).length > 0) {
-                element.tabChange('mainTabs', lay_id);
-            } else {
-                // 创建
+            if ($('[lay-id="' + lay_id + '"]', top.document).length <= 0) {
                 var tab_content = '<iframe name="' + options.id + '" src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
                 element.tabAdd('mainTabs', {
                     title: options.title,
