--- a/src/main/resources/vm/system/nginx.vm
+++ b/src/main/resources/vm/system/nginx.vm
@@ -182,7 +182,7 @@
                     success: function (data) {
                         layer.msg(data.msg);
                         if (200 == data.code) {
-                            table.reload('tab_ngx', {});
+                            table.reload('tab_ngx');
                         }
                     }
                 });
@@ -223,13 +223,11 @@
                 title: '证书管理',
             });
         });
-
-        // 刷新
-        $('#refresh').on('click', function () {
-            table.reload('tab_ngx');
-        });
     }
 
+    function reload() {
+        table.reload('tab_ngx');
+    }
 </script>
 
 </html>
