--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -109,10 +109,12 @@
                            data-options="{'id':'alioss', 'title':'阿里云OSS', 'url':'./system/alioss'}">阿里云OSS</a>
                     </li>
                 #end
-                <li class="layui-nav-item">
-                    <a href="javascript:;"
-                       data-options="{'id':'nginx', 'title':'nginx管理', 'url':'./system/nginx/list.html'}">nginx管理</a>
-                </li>
+                #if($user.isManage())
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"
+                           data-options="{'id':'nginx', 'title':'nginx管理', 'url':'./system/nginx/list.html'}">nginx管理</a>
+                    </li>
+                #end
             </ul>
         </div>
     </div>
